--- a/onestopsalon/templates/onestopsalon/index.html
+++ b/onestopsalon/templates/onestopsalon/index.html
@@ -1,16 +1,32 @@
-{% extends "OneStopSalon/layout.html" %}
-
-{% block body %}
-
-    <header>
-        <h1>One Stop Salon</h1>
-    </header>
-    <hr>
-    <nav>
-        <span><a href="">Admin Login</span></a>
-        <span><a href="{% url 'users:register' %}">User Registration</span></a>
-        <span><a href="">User Login</span></a>
-    </nav>
-
-
-{% endblock %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="{% static 'onestopsalon/styles.css' %}">
+        <meta name="viewport" content="width=device-=width, initial-scale=1.0">
+    </head>
+    <body>
+         <div class="bg">
+            <nav>
+                <div class="logo">
+                    OneStopSalon
+                </div>
+                <div class="menu">
+                    <a href="#">Home</a>
+                    <a href="#">Services</a>
+                    <a href="#">Feedback</a>
+                    <a href="#">Contact Us</a>
+                </div>
+                <div class="login">
+                    <a href="#">Login</a>
+                </div>
+            </nav>
+            <section class="s-txt">
+                <h2>One Stop</h2>
+                <h2>For All.....</h2>
+                <h1>Your Salon Needs</h1>
+                <a href="#">Sign Up</a>
+            </section>
+        </div>
+    </body>
+    </html>
