--- a/onestopsalon/templates/onestopsalon/salons.html
+++ b/onestopsalon/templates/onestopsalon/salons.html
@@ -19,7 +19,7 @@
             <a href="#">Services</a>
             <a href="#">Feedback</a>
             <a href="#">Contact Us</a>
-            <a href="#">Logout</a>
+            <a href="{% url 'onestopsalon:home' %}">Logout</a>
         </div>
     </nav>
     {% for salon in salons %}
