--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -1,7 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>OneStopSalon</title>
+        <link rel="stylesheet" href="{% static 'users/styles.css' %}">
     </head>
     <body>
         {% block body %}
