--- a/onestopsalon/templates/onestopsalon/homepage.html
+++ b/onestopsalon/templates/onestopsalon/homepage.html
@@ -13,8 +13,7 @@
                 </div>
                 <div class="menu">
                     <a href="{% url 'onestopsalon:home' %}">Home</a>
-                    <a href="#">Services</a>
-                    <a href="#">Feedback</a>
+                    <a href="{% url 'onestopsalon:feedback' %}">Feedback</a>
                     <a href="{% url 'onestopsalon:contact' %}">Contact Us</a>
                 </div>
                 <div class="login">
@@ -28,5 +27,9 @@
                 <a href="{% url 'users:register' %}">Sign Up</a>
             </section>
         </div>
+        <footer>
+            <center>&copy;2023 copyright all rights reserved</center>
+            <center>OneStopSalon</center>
+        </footer>
     </body>
     </html>
